Kubernetes/Yamls/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - port: 90        # Service port inside cluster
      targetPort: 80  # Container port in pod
      nodePort: 31000 # NodePort (must be between 30000-32767)
